--- a/templates/login.html
+++ b/templates/login.html
@@ -2,13 +2,15 @@
 {% block content %}
   <div class="card">
     <h2>Iniciar sesión</h2>
+    <p> Ingresa con las credenciales otorgadas para acceder al menú.</p>
     <form method="post">
-      <label>Usuario</label>
-      <input name="usuario" required>
-      <label>Contraseña</label>
-      <input name="password" type="password" required>
+      <label>Usuario:</label><br />
+      <input name="usuario" required><br />
+      <label>Contraseña:</label><br />
+      <input name="password" type="password" required><br />
       <button type="submit">Ingresar</button>
     </form>
     <p class="muted">Credenciales por defecto: <strong>admin / admin123</strong></p>
+    <p class="muted">Si tiene inconvenientes para inciar sesión, comuníquese a lautaro.paz@comunidad.ub.edu.ar</p>
   </div>
 {% endblock %}
